feat: switched to issuer approach
